# amdgpu-rs

./: .typos.toml  README.md  README.tpl  flake.nix
.github/workflows/: test.yml
amdgpu-device-libs/: .gitignore  Cargo.toml  README.md  README.tpl
amdgpu-device-libs-build/: Cargo.toml  README.md  README.tpl  compile-util.sh  util.hip  util32.bc  util64.bc
amdgpu-device-libs-build/src/: lib.rs
amdgpu-device-libs/.cargo/: config.toml
amdgpu-device-libs/src/: intrinsics.rs  lib.rs
examples/: README.md
examples/default-cpu/: Cargo.toml  README.md
examples/default-cpu/src/: main.rs
examples/hostcall-cpu/: Cargo.toml  README.md
examples/hostcall-cpu/src/: main.rs
examples/hostcall-gpu/: Cargo.toml  README.md
examples/hostcall-gpu/src/: lib.rs
examples/panic/: Cargo.toml  README.md
examples/panic/src/: lib.rs
examples/println/: Cargo.toml  README.md
examples/println/.cargo/: config.toml
examples/println/src/: lib.rs
examples/vector_copy/: Cargo.toml  README.md
examples/vector_copy/.cargo/: config.toml
examples/vector_copy/src/: lib.rs
