[package]
name = "amdgpu-device-libs"
version = "0.1.0"
authors = ["Flakebi <flakebi@t-online.de>"]
edition = "2024"
rust-version = "1.86"
description = "Support library for the amdgpu target, linking to device-libs"
repository = "https://github.com/Flakebi/amdgpu-rs/tree/main/amdgpu-device-libs"
license = "MIT OR Apache-2.0"
keywords = ["amdgpu", "gpu"]
categories = [
  "api-bindings",
  "external-ffi-bindings",
  "hardware-support",
  "no-std::no-alloc",
]

[package.metadata.docs.rs]
rustc-args = ["-Ctarget-cpu=gfx900"]

[features]
default = ["global_allocator", "hostcall", "panic_handler", "print"]
alloc = ["device_libs"]
global_allocator = ["alloc"]
device_libs = []
hostcall = ["device_libs"]
panic_handler = []
print = ["device_libs"]
